src/main/resources/com/trsst/ui/site/ui.css
/* ... */
aside div.feeds-renderer .feed .title {
	color: #000;
	font-size: 120%;
	line-height: 120%;
	margin-left: 88px;
	margin-top: 4px;
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
}
aside div.feeds-renderer .feed .subtitle {
	color: #000;
	position: absolute;
	left: 96px;
	right: 48px;
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
}
.signed-in aside div.feeds-renderer .feed .subtitle {
	/* show follow button instead */
	display: none;
}

aside div.feeds-renderer .feed .feed-id {
	font-size: 85%;
	margin-left: 88px;
	margin-bottom: 4px;
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
}

aside div.feeds-renderer .feed .follow {
	left: 92px;
	text-align: left;
}
aside div.feeds-renderer .feed .logo {
	display: none;
}
aside div.feeds-renderer .feed .icon {
	margin: 8px;
	margin-top: 0px;
	position: absolute;
}

aside div.feeds-renderer:empty {
	display: none;
}

/* @end */

/* @group Entry Page */

body.page-entry article {
	position: absolute;
	width: 50%;
	left: 50%;
	margin-left: -25%;
}
body.page-entry.pending article {
	display: none;
}

body.page-entry .profile-renderer {
	display: none;
}

body.page-entry .feed-renderer {
	/* configure replies beneath post */
	margin: 5px 50px;
}
body.page-entry .feed-renderer .entry .address.parent {
	/* don't show link back to this page */
	display:none; 
}

body.page-entry article .renderer {
	padding: 0px;
	border-radius: 24px;
}

body.page-entry article .entry-renderer section {
	overflow: visible;
	position: relative;
	margin-left: -40px;
	margin-right: 8px;
	top: 12px;
}

body.page-entry article .entry-renderer div.content img {
	position: relative;
}

body.page-entry article .entry-renderer:before {
	content: '';
	font-weight: bold;
	font-size: 20px;
	position: absolute;
	left: 16px;
	top: 18px;
	color: black;
}
body.page-entry article .entry-renderer:empty:before {
	top: 28px;
	left: 0px;
	width: 100%;
	content: 'No entry found';
	font-size: 200%;
	text-align: center;
	color: #aaa;
}
body.page-entry.pending article .entry-renderer:empty:before {
	content: 'Loading...';
}

body.page-entry .entry-renderer .entry {
	padding-top: 24px;
	padding-bottom: 48px;
	padding-left: 96px;
	padding-right: 48px;
	border-radius: 8px;
}

body.page-entry .entry-renderer .entry .icon {
	width: 64px;
	height: 64px;
	left: 0px;
}
body.page-entry .entry-renderer .entry .feed-title {
	margin-top: 8px;
	font-size: 24px;
	line-height: 28px;
	margin-left: 80px;
	min-height: 28px;
}
body.page-entry .entry-renderer .entry .feed-id {
	display: block;
	font-size: 16px;
	line-height: 18px;
	margin-left: 80px;
	padding-right: 0px;
}
body.page-entry .entry-renderer .entry .title {
	display: block;
	margin-left: 8px;
	margin-top: 32px;
	margin-bottom: 18px;
	font-size: 28px;
	line-height: 32px;
	font-weight: lighter;
}

body.page-entry .entry-renderer .entry.expanded.contented .content .overlay {
	height: 400px;
}
body.page-entry .entry-renderer .entry .content>a {
}

body.page-entry .entry-renderer .entry .composer {
	width: 100%;
}

/* @group Single Entry Date Handling */

body.page-entry .entry-renderer .entry .updated {
	position: absolute;
	top: 100%;
	height: 24px;
	bottom: -24px;
	left: 0px;
	width: 100%;
	margin-top: 8px;
	text-align: center;
}
body.page-entry .entry-renderer .entry .updated .relative {
	display: none !important;
}
body.page-entry .entry-renderer .entry .updated .absolute {
	display: inherit !important;
}
body.page-entry .entry-renderer .entry .updated .absolute span {
	display: inline;
}
body.page-entry .entry-renderer .entry .updated .absolute span.minute:after{
	content: ' ';
}
body.page-entry .entry-renderer .entry .updated .absolute span.second{
	display: none;
}
body.page-entry .entry-renderer .entry .updated .absolute span.day:before {
	content: ' - ';
}
body.page-entry .entry-renderer .entry .updated .absolute span.month span {
	display: none;
}
body.page-entry .entry-renderer .entry .updated .absolute span.year:before {
	content: ' ';
}

/* @end */

/* @end */

@media only screen and (max-width: 960px) {

body.page-entry article {
	position: absolute;
	width: 490px;
	left: 50%;
	margin-left: -250px;
}

}

/* @group iPhone/Android/Mobile */
@media only screen and (max-width: 480px) {

body {
	margin: 4px -4px;
    -webkit-text-size-adjust: 100%;
}   
aside {
	padding-bottom: 0px !important;
}
aside div.feeds-renderer {
	display: none !important;
}

div.main.wrapper {
	padding: 0px 0px;
	margin: 8px 0px;
	width: 100%;
}

aside #profileRenderer div.feed {
	margin-bottom: 0px;
	margin-top: -12px;
	background-color: #555;
}
.header-container,
.footer-container
{
	background-color: #222;
}
aside .private.messaging {
	display: none !important;
}
.menu {
	height: 64px;
	overflow: hidden;
	border-radius: 4px;
	padding-right: 16px;
	padding-left: 16px;
	margin-right:-16px;
	-webkit-user-select: none;	
}
.menu-item {
	padding-left: 0px;
	padding: 0xp 16px;
	margin-left:-16px;
	margin-right:-32px;
	padding-left:16px;
}
body.page-entry .entry-renderer .entry {
	margin-top: -12px;
}

.util-search {
	/* take full footer */
	right: 0px;
}
.util-browser-launcher {
	display: none;
}
.util-feed-launcher {
	display: none;
}
.pending .footer-container:after {
	display: none;
}


}

/* @end */

